some change on libraries required

--- a/env.yml
+++ b/env.yml
@@ -1,14 +1,16 @@
 name: SNA
 dependencies:
   - ipykernel
+  - joblib
   - matplotlib
   - networkx
+  - node2vec
   - numpy
   - pandas
   - pip
   - python
+  - scikit-learn
   - scipy
   - seaborn
   - tabulate
   - tqdm
-  - scikit-learn
